--- a/petshop.html
+++ b/petshop.html
@@ -45,30 +45,31 @@
 
         <!-- CTA Button -->
 <!-- Collaboration Section -->
+<!-- Collaboration Section -->
 <div class="collab-section fadeIn">
   
-  <h3 class="collab-title">همکاری با ما</h3>
+  <h3 class="collab-title">شرکت‌های همکاری‌کننده</h3>
 
   <p class="collab-text">
-    برای همکاری در حوزه محصولات پت‌شاپ و دریافت اطلاعات بیشتر،  
-    از وب‌سایت رسمی ما دیدن کنید:
+    مجموعه‌ای از کسب‌وکارهایی که با ما همکاری داشته‌اند  
   </p>
 
-  <!-- همکاری‌ها -->
+  <!-- لیست شرکت‌ها -->
   <ul class="collab-list">
-    <li class="collab-item">همکاری با فروشگاه‌ها و پت‌شاپ‌ها</li>
-    <li class="collab-item">تأمین عمده محصولات</li>
-    <li class="collab-item">مشاوره و پشتیبانی تخصصی</li>
+    <li class="collab-item">همکاری با برندهای نوپا و در حال رشد</li>
+    <li class="collab-item">تأمین و پشتیبانی برای مجموعه‌های بزرگ</li>
+    <li class="collab-item">ارائه خدمات تخصصی به کسب‌وکارهای مختلف</li>
   </ul>
 
-  <!-- دکمه -->
-  <button class="collab-btn" onclick="window.open('https://www.unitytape.ir','_blank')">
-    ورود به سایت UnityTape
+  <!-- دکمه با متن جدید -->
+  <button class="collab-btn" onclick="window.open('https://www.brooklynpetcolor.ir','_blank')">
+    تأمین‌کننده رنگ موی مخصوص حیوانات
   </button>
 
-  <p class="collab-link">www.unitytape.ir</p>
+  <p class="collab-link">www.brooklynpetcolor.ir</p>
 
 </div>
+
 
       </div>
 
