--- a/hero.html
+++ b/hero.html
@@ -13,12 +13,11 @@
 
     <!-- عنوان -->
  <h1 class="hero-title slide-up">
-  گروه <br><span class="accent-text">Sahand Apex</span><br>
-تأمین‌کننده و واردکننده تخصصی محصولات پت‌شاپ و ملزومات اداری
+  گروه <br><span class="accent-text">Sahand Apex</span><br> تأمین‌کننده و واردکننده
 </h1>
 
 <p class="hero-subtitle slide-up-delay">
- ما تأمین می‌کنیم، تا شما با خیال راحت رشد کنید — از پت‌شاپ تا ملزومات اداری
+ ما تأمین می‌کنیم، تا شما با خیال راحت رشد کنید
 </p>
 
     <!-- ت
